--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 
 </html>
